# ghialdeg

./: README.md  action.yml  alpha.py  pyproject.toml
.github/: action.yml
.github/workflows/: cmd-din-wflow.yaml  cmd-din-wflowv3.yml  cmd_din_wflowver2.yml  mainV44.yml  mainpipi.yml  mainsoim.yml
src/: beta.py
