[project]
name = "prj301"
version = "0.1.0"
description = "prj portant"
authors = [
    {name = "grlp op", email = "gfr@yu.po"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
